--- a/packages/probing-eservice-operations/.env
+++ b/packages/probing-eservice-operations/.env
@@ -2,3 +2,9 @@ HOST=0.0.0.0
 PORT=3000
 LOG_LEVEL=info
 TEST=true
+
+DB_HOST=localhost
+DB_NAME=mydatabase
+DB_USERNAME=mydbuser
+DB_PASSWORD=mypassword
+DB_PORT=5432
