--- a/packages/probing-eservice-operations/package.json
+++ b/packages/probing-eservice-operations/package.json
@@ -25,13 +25,13 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/uuid": "^9.0.2",
+    "@testcontainers/postgresql": "^10.2.2",
+    "testcontainers": "^10.2.2",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "pagopa-interop-probing-commons": "workspace:*",
-    "pagopa-interop-probing-models": "workspace:*",
     "@zodios/core": "^10.9.2",
     "@zodios/express": "^10.6.1",
     "aws-sdk": "^2.657.0",
@@ -43,9 +43,12 @@
     "express-winston": "^4.2.0",
     "moment": "^2.29.4",
     "openapi-zod-client": "^1.7.1",
+    "pagopa-interop-probing-commons": "workspace:*",
+    "pagopa-interop-probing-models": "workspace:*",
     "ts-pattern": "^5.0.1",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.0",
+    "vitest": "^1.2.1",
     "winston": "^3.11.0",
     "zod": "^3.21.4"
   }
