--- a/packages/probing-eservice-operations/package.json
+++ b/packages/probing-eservice-operations/package.json
@@ -21,15 +21,16 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@pagopa/eslint-config": "^3.0.0",
+    "@testcontainers/postgresql": "^10.2.2",
     "@types/dotenv-flow": "^3.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/uuid": "^9.0.2",
-    "@testcontainers/postgresql": "^10.2.2",
-    "testcontainers": "^10.2.2",
     "prettier": "^2.8.8",
+    "testcontainers": "^10.2.2",
     "ts-node": "^10.9.1",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "vitest": "^0.33.0"
   },
   "dependencies": {
     "@zodios/core": "^10.9.2",
@@ -48,7 +49,6 @@
     "ts-pattern": "^5.0.1",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.0",
-    "vitest": "^1.2.1",
     "winston": "^3.11.0",
     "zod": "^3.21.4"
   }
