--- a/packages/probing-eservice-operations/tsconfig.json
+++ b/packages/probing-eservice-operations/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "emitDecoratorMetadata": true,
-    "outDir": "dist"
+    "outDir": "dist",
   },
   "include": [
     "src"
-  ]
+, "test"  ]
 }
 
