--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false
   }
 }
