Update dependencies and envs

--- a/packages/probing-eservice-operations/.env
+++ b/packages/probing-eservice-operations/.env
@@ -8,3 +8,8 @@ DB_NAME=mydatabase
 DB_USERNAME=mydbuser
 DB_PASSWORD=mypassword
 DB_PORT=5432
+
+DATABASE_USERNAME=mydbuser_2
+DATABASE_PASSWORD=mypassword_2
+
+SCHEMA_NAME=probing
