--- a/packages/probing-eservice-operations/package.json
+++ b/packages/probing-eservice-operations/package.json
@@ -5,8 +5,8 @@
   "main": "dist",
   "type": "module",
   "scripts": {
-    "test": "vitest",
-    "test:it": "vitest db",
+    "test": "vitest --config ./test/vitest.config.ts",
+    "test:it": "vitest db --config ./test/vitest.config.ts",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:autofix": "eslint . --ext .ts,.tsx --fix",
     "format:check": "prettier --check src",
@@ -33,6 +33,7 @@
     "vitest": "^0.33.0"
   },
   "dependencies": {
+    "@tsconfig/node-lts": "^20.1.0",
     "@zodios/core": "^10.9.2",
     "@zodios/express": "^10.6.1",
     "aws-sdk": "^2.657.0",
@@ -43,9 +44,11 @@
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.44",
     "openapi-zod-client": "^1.7.1",
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
+    "pg": "^8.11.3",
     "ts-pattern": "^5.0.1",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.0",
