Replaced references to environment variables with configuration variables

--- a/packages/probing-eservice-operations/.env
+++ b/packages/probing-eservice-operations/.env
@@ -13,3 +13,5 @@ DATABASE_USERNAME=mydbuser_2
 DATABASE_PASSWORD=mypassword_2
 
 SCHEMA_NAME=probing
+TOLERANCE_MULTIPLIER_IN_MINUTES=10
+DEFAULT_AWS_REGION=us-west-2
