--- a/packages/probing-eservice-operations/.env
+++ b/packages/probing-eservice-operations/.env
@@ -1,17 +1,21 @@
+# Server Configuration
 HOST=0.0.0.0
 PORT=3000
 LOG_LEVEL=info
-TEST=true
+TEST=true  # Set to true when running tests
 
+# Database Configuration
 DB_HOST=localhost
 DB_NAME=mydatabase
 DB_USERNAME=mydbuser
 DB_PASSWORD=mypassword
 DB_PORT=5432
 
-DATABASE_USERNAME=mydbuser_2
-DATABASE_PASSWORD=mypassword_2
+# Additional Database Configuration (Used for a specific container)
+DATABASE_USERNAME=mydbuser_2  # TODO: REDUNDANT VARIABLE of DB_USERNAME FOR postgreSqlContainer due conflicts with typeorm migration for user already created
+DATABASE_PASSWORD=mypassword_2  # TODO: REDUNDANT VARIABLE of DB_PASSWORD FOR postgreSqlContainer due conflicts with typeorm migration for user already created
 
+# Application Settings
 SCHEMA_NAME=probing
 TOLERANCE_MULTIPLIER_IN_MINUTES=3
 DEFAULT_AWS_REGION=us-west-2
