--- a/packages/probing-frontend/package.json
+++ b/packages/probing-frontend/package.json
@@ -28,7 +28,8 @@
     "i18next": "^23.5.1",
     "react-error-boundary": "^4.0.11",
     "react-router-dom": "^6.16.0",
-    "react-i18next": "^13.2.2"
+    "react-i18next": "^13.2.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
