--- a/packages/probing-frontend/package.json
+++ b/packages/probing-frontend/package.json
@@ -10,8 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.15",
@@ -26,9 +24,12 @@
     "@tanstack/react-query-devtools": "^4.35.3",
     "axios": "^1.6.0",
     "i18next": "^23.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
-    "react-router-dom": "^6.16.0",
+    "react-hook-form": "^7.50.0",
     "react-i18next": "^13.2.2",
+    "react-router-dom": "^6.16.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
@@ -37,14 +38,14 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.0.3"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
   }
 }
