--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -18,8 +18,10 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.504.0",
     "@zodios/core": "^10.9.6",
     "@zodios/express": "^10.6.1",
+    "aws-xray-sdk": "^3.0.0",
     "class-validator": "^0.14.0",
     "express-winston": "^4.2.0",
     "moment": "^2.29.4",
