removed infra scripts

--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "lint:autofix": "turbo lint:autofix",
     "format:check": "turbo format:check",
     "format:write": "turbo format:write",
-    "generate-model": "turbo generate-model",
-    "infra:start": "./scripts/infra-start.sh",
-    "infra:stop": "./scripts/infra-stop.sh",
-    "infra:destroy": "./scripts/infra-destroy.sh"
+    "generate-model": "turbo generate-model"
   },
   "devDependencies": {
     "@tsconfig/node-lts": "^20.1.0",
