--- a/packages/probing-frontend/package.json
+++ b/packages/probing-frontend/package.json
@@ -22,6 +22,7 @@
     "@pagopa/mui-italia": "^1.0.1",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
+    "aws-amplify": "^5.2.2",
     "axios": "^1.6.0",
     "i18next": "^23.5.1",
     "react": "^18.2.0",
