--- a/packages/probing-response-updater/.env
+++ b/packages/probing-response-updater/.env
@@ -1,4 +1,10 @@
 INTEROP_PROBING_RESPONSE_UPDATER_NAME="interop-be-probing-response-updater-test"
 SQS_ENDPOINT_POLL_RESULT_QUEUE="https://sqs.example.com/update-response-received"
 AWS_REGION="eu-central-1"
-DEFAULT_CONSUMER_TIMEOUT_IN_SECONDS="3"
+CONSUMER_POLLING_TIMEOUT_IN_SECONDS="3"
+API_OPERATIONS_BASEURL="http://localhost:3000"
+
+# TEST PURPOSE
+HOST=0.0.0.0
+PORT=3000
+LOG_LEVEL=info
