--- a/packages/probing-response-updater/package.json
+++ b/packages/probing-response-updater/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@tsconfig/node-lts": "^20.1.0",
     "@zodios/core": "^10.9.2",
+    "axios": "^1.6.7",
     "dotenv-flow": "^3.2.0",
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
