--- a/packages/probing-eservice-operations/.env
+++ b/packages/probing-eservice-operations/.env
@@ -5,7 +5,7 @@ LOG_LEVEL=info
 DB_HOST=127.0.0.1
 DB_NAME=mydatabase
 DB_USERNAME=mydbuser
-DB_PASSWORD=docker exec -it mypostgres2 psql -U mydbuser -d mydatabase -f 
+DB_PASSWORD=mypassword
 DB_PORT=5432
 
 SCHEMA_NAME=probing
