--- a/packages/probing-response-updater/.env
+++ b/packages/probing-response-updater/.env
@@ -3,3 +3,4 @@ SQS_ENDPOINT_POLL_RESULT_QUEUE="https://sqs.example.com/update-response-received
 AWS_REGION="eu-central-1"
 CONSUMER_POLLING_TIMEOUT_IN_SECONDS="3"
 API_OPERATIONS_BASEURL="http://localhost:3000"
+LOG_LEVEL=info
