--- a/packages/probing-api/package.json
+++ b/packages/probing-api/package.json
@@ -25,6 +25,7 @@
     "@types/dotenv-flow": "^3.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.2",
     "prettier": "^2.8.8",
     "testcontainers": "^10.2.2",
@@ -38,12 +39,14 @@
     "@zodios/express": "^10.6.1",
     "aws-sdk": "^2.657.0",
     "aws-xray-sdk": "^3.0.0",
+    "axios": "^1.6.7",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
     "openapi-zod-client": "^1.7.1",
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
     "pg": "^8.11.3",
+    "supertest": "^6.3.4",
     "ts-pattern": "^5.0.1",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.0",
