--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "strictPropertyInitialization": false
+    "noFallthroughCasesInSwitch": true
   }
 }
