--- a/packages/probing-eservice-operations/open-api/api-eservice-operations-interop-v1.yaml
+++ b/packages/probing-eservice-operations/open-api/api-eservice-operations-interop-v1.yaml
@@ -959,6 +959,9 @@ components:
 
     SearchEserviceResponse:
       type: object
+      required: 
+        - content
+        - totalElements
       properties:
         content:
           title: eservice dto list
@@ -1002,6 +1005,13 @@ components:
 
     ProbingDataEserviceResponse:
       type: object
+      required: 
+        - probingEnabled
+        - state
+        - responseReceived
+        - lastRequest
+        - responseStatus
+        - pollingFrequency
       properties:
         probingEnabled:
           title: probing activated
