--- a/packages/probing-api/open-api/api-external-interop-v1.yaml
+++ b/packages/probing-api/open-api/api-external-interop-v1.yaml
@@ -265,8 +265,7 @@ paths:
           required: false
           description: the e-service's version
           schema:
-            type: string
-            format: integer
+            type: integer
         - name: state
           in: query
           required: false
