--- a/packages/probing-frontend/package.json
+++ b/packages/probing-frontend/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query-devtools": "^4.35.3",
     "aws-amplify": "^5.2.2",
     "axios": "^1.6.0",
+    "d3": "^7.8.5",
     "i18next": "^23.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@types/d3": "latest",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
