--- a/packages/probing-caller/package.json
+++ b/packages/probing-caller/package.json
@@ -21,12 +21,14 @@
     "@pagopa/eslint-config": "^3.0.0",
     "@types/dotenv-flow": "^3.2.0",
     "@types/node": "^20.3.1",
+    "@types/uuid": "^9.0.2",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2",
     "vitest": "^0.33.0"
   },
   "dependencies": {
+    "@aws-sdk/client-kms": "^3.521.0",
     "@tsconfig/node-lts": "^20.1.0",
     "@zodios/core": "^10.9.2",
     "axios": "^1.6.7",
@@ -34,6 +36,7 @@
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
     "ts-pattern": "^5.0.1",
+    "uuid": "^9.0.1",
     "zod": "^3.21.4"
   }
 }
