--- a/packages/probing-caller/.env
+++ b/packages/probing-caller/.env
@@ -6,6 +6,6 @@ AWS_REGION="eu-central-1"
 CONSUMER_POLLING_TIMEOUT_IN_SECONDS="3"
 LOG_LEVEL="info"
 JWT_PAYLOAD_EXPIRE_TIME_IN_SEC="1"
-JWT_PAYLOAD_ISSUER=""
-JWT_PAYLOAD_SUBJECT=""
-JWT_PAYLOAD_KID_KMS=""
+JWT_PAYLOAD_ISSUER="probing-caller-issuer"
+JWT_PAYLOAD_SUBJECT="probing-caller-subject"
+JWT_PAYLOAD_KID_KMS="5ac4d1e9-fb02-4b23-a1f2-eab1afd119bb"
