--- a/packages/probing-eservice-operations/open-api/api-eservice-operations-interop-v1.yaml
+++ b/packages/probing-eservice-operations/open-api/api-eservice-operations-interop-v1.yaml
@@ -820,6 +820,9 @@ components:
 
     PollingEserviceResponse:
       type: object
+      required:
+        - content
+        - totalElements
       properties:
         content:
           title: polling active response
@@ -1035,6 +1038,8 @@ components:
 
     SearchProducerNameResponse:
       type: object
+      required:
+        - content
       properties:
         content:
           title: list of producers names
