--- a/turbo.json
+++ b/turbo.json
@@ -7,23 +7,13 @@
       "dependsOn": [
         "^build",
         "generate-model",
-        "generate-protobuf",
-        "//#infra:start"
+        "generate-client"
       ]
-    },
-    "//#infra:start": {
-      "cache": false
-    },
-    "//#infra:stop": {
-      "cache": false
-    },
-    "//#infra:destroy": {
-      "cache": false
     },
     "build": {
       "dependsOn": [
         "generate-model",
-        "generate-protobuf",
+        "generate-client",
         "^build"
       ],
       "outputs": [
@@ -35,12 +25,9 @@
         "^generate-model"
       ]
     },
-    "generate-protobuf": {
+    "generate-client": {
       "dependsOn": [
-        "^generate-protobuf"
-      ],
-      "outputs": [
-        "src/gen"
+        "^generate-client"
       ]
     },
     "test": {
