--- a/packages/probing-api/package.json
+++ b/packages/probing-api/package.json
@@ -44,6 +44,7 @@
     "openapi-zod-client": "^1.7.1",
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
+    "pagopa-interop-probing-eservice-operations-client": "workspace:*",
     "ts-pattern": "^5.0.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
