getProducers content required

--- a/packages/probing-eservice-operations/open-api/api-eservice-operations-interop-v1.yaml
+++ b/packages/probing-eservice-operations/open-api/api-eservice-operations-interop-v1.yaml
@@ -1035,6 +1035,8 @@ components:
 
     SearchProducerNameResponse:
       type: object
+      required:
+        - content
       properties:
         content:
           title: list of producers names
