Update import operations client

--- a/packages/probing-response-updater/package.json
+++ b/packages/probing-response-updater/package.json
@@ -33,6 +33,7 @@
     "dotenv-flow": "^3.2.0",
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
+    "pagopa-interop-probing-eservice-operations-client": "workspace:*",
     "ts-pattern": "^5.0.1",
     "zod": "^3.21.4"
   }
