--- a/packages/probing-api/package.json
+++ b/packages/probing-api/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pagopa-interop-probing-eservice-operations",
+  "name": "pagopa-interop-probing-api",
   "version": "1.0.0",
-  "description": "PagoPA probing eservice operations",
+  "description": "PagoPA probing api",
   "main": "dist",
   "type": "module",
   "scripts": {
@@ -13,7 +13,7 @@
     "format:write": "prettier --write src",
     "start": "node --watch --no-warnings --loader ts-node/esm -r 'dotenv-flow/config' ./src/index.ts",
     "build": "tsc",
-    "generate-model": "mkdir -p ./src/model/generated && pnpm openapi-zod-client './open-api/api-eservice-operations-interop-v1.yaml' -o './src/model/generated/api.ts'",
+    "generate-model": "mkdir -p ./src/model/generated && pnpm openapi-zod-client './open-api/api-external-interop-v1.yaml' -o './src/model/generated/api.ts'",
     "clean-generated": "pnpm exec rm ./src/model/generated/api.ts"
   },
   "keywords": [],
@@ -21,29 +21,31 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@pagopa/eslint-config": "^3.0.0",
-    "@testcontainers/postgresql": "^10.2.2",
     "@types/dotenv-flow": "^3.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.2",
+    "supertest": "^6.3.4",
     "prettier": "^2.8.8",
-    "testcontainers": "^10.2.2",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2",
     "vitest": "^0.33.0"
   },
   "dependencies": {
+    "@tsconfig/node-lts": "^20.1.0",
     "@zodios/core": "^10.9.2",
     "@zodios/express": "^10.6.1",
+    "aws-sdk": "^2.657.0",
+    "aws-xray-sdk": "^3.0.0",
+    "axios": "^1.6.7",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
     "openapi-zod-client": "^1.7.1",
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
     "pagopa-interop-probing-eservice-operations-client": "workspace:*",
-    "pg": "^8.11.3",
     "ts-pattern": "^5.0.1",
-    "typeorm": "^0.3.17",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   }
