--- a/packages/probing-telemetry-writer/package.json
+++ b/packages/probing-telemetry-writer/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pagopa-interop-probing-response-updater",
+  "name": "pagopa-interop-probing-telemetry-writer",
   "version": "1.0.0",
-  "description": "PagoPA probing response updater",
+  "description": "PagoPA probing telemetry writer",
   "main": "dist",
   "type": "module",
   "scripts": {
