Update API model, clients and minor fix

--- a/packages/probing-eservice-operations/open-api/api-eservice-operations-interop-v1.yaml
+++ b/packages/probing-eservice-operations/open-api/api-eservice-operations-interop-v1.yaml
@@ -820,6 +820,9 @@ components:
 
     PollingEserviceResponse:
       type: object
+      required:
+        - content
+        - totalElements
       properties:
         content:
           title: polling active response
