--- a/packages/probing-statistics-api/.env
+++ b/packages/probing-statistics-api/.env
@@ -1,4 +1,4 @@
-INTEROP_PROBING_STATISTICS_APP_NAME="statistics-api"
+INTEROP_PROBING_STATISTICS_APP_NAME="interop-be-probing-statistics-api-test"
 HOST=127.0.0.1
 PORT=3010
 LOG_LEVEL=info
