--- a/packages/probing-api/.env
+++ b/packages/probing-api/.env
@@ -5,3 +5,4 @@ LOG_LEVEL=info
 AWS_REGION="eu-central-1"
 API_OPERATIONS_BASEURL="http://localhost:3000"
 TOLERANCE_MULTIPLIER_IN_MINUTES=3
+CORS_ORIGIN_ALLOWED="*"
