--- a/packages/probing-api/package.json
+++ b/packages/probing-api/package.json
@@ -21,6 +21,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@pagopa/eslint-config": "^3.0.0",
+    "@types/cors": "^2.8.17",
     "@types/dotenv-flow": "^3.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
@@ -37,10 +38,10 @@
     "@zodios/core": "^10.9.2",
     "@zodios/express": "^10.6.1",
     "aws-sdk": "^2.657.0",
-    "aws-xray-sdk": "^3.0.0",
     "axios": "^1.6.7",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "openapi-zod-client": "^1.7.1",
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
