--- a/packages/probing-frontend/package.json
+++ b/packages/probing-frontend/package.json
@@ -42,9 +42,12 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@types/d3": "latest",
     "eslint": "^8.49.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "^2.8.8",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
