--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -28,10 +28,14 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
-    "eslint": "^8.44.0",
-    "prettier": "^2.8.8",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.3"
   }
 }
