--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -24,9 +24,13 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "eslint": "^8.44.0",
-    "prettier": "^2.8.8",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "tsc-esm-fix": "^2.20.15",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.3"
   }
 }
