--- a/packages/probing-api/package.json
+++ b/packages/probing-api/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "vitest --config ./test/vitest.config.ts",
     "test:it": "vitest db --config ./test/vitest.config.ts",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "eslint . --ext .ts,.tsx -c .eslintrc",
     "lint:autofix": "eslint . --ext .ts,.tsx --fix",
     "format:check": "prettier --check src",
     "format:write": "prettier --write src",
@@ -20,7 +20,6 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@pagopa/eslint-config": "^3.0.0",
     "@types/cors": "^2.8.17",
     "@types/dotenv-flow": "^3.2.0",
     "@types/express": "^4.17.17",
@@ -28,9 +27,8 @@
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.2",
     "supertest": "^6.3.4",
-    "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
-    "typescript": "5.2.2",
+    "typescript": "^5.1.3",
     "vitest": "^0.33.0"
   },
   "dependencies": {
