--- a/packages/probing-response-updater/package.json
+++ b/packages/probing-response-updater/package.json
@@ -18,13 +18,17 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@pagopa/eslint-config": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "@types/dotenv-flow": "^3.2.0",
     "@types/node": "^20.3.1",
-    "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
-    "typescript": "5.2.2",
-    "vitest": "^0.33.0"
+    "typescript": "^5.1.3",
+    "vitest": "^0.33.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.3"
   },
   "dependencies": {
     "@tsconfig/node-lts": "^20.1.0",
