--- a/packages/probing-statistics-api/package.json
+++ b/packages/probing-statistics-api/package.json
@@ -20,17 +20,21 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@pagopa/eslint-config": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "@types/cors": "^2.8.17",
     "@types/dotenv-flow": "^3.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.2",
-    "prettier": "^2.8.8",
     "supertest": "^6.3.4",
     "ts-node": "^10.9.1",
-    "typescript": "5.2.2",
-    "vitest": "^0.33.0"
+    "typescript": "^5.1.3",
+    "vitest": "^0.33.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.3"
   },
   "dependencies": {
     "@aws-sdk/client-timestream-query": "^3.529.1",
