--- a/packages/probing-telemetry-writer/package.json
+++ b/packages/probing-telemetry-writer/package.json
@@ -23,7 +23,7 @@
     "@types/dotenv-flow": "^3.2.0",
     "@types/node": "^20.3.1",
     "ts-node": "^10.9.1",
-    "typescript": "5.2.2",
+    "typescript": "^5.1.3",
     "vitest": "^0.33.0",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
