--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -1,57 +1,45 @@
-name: CI
+name: "Build & Push"
+
 on:
   push:
     branches: "probing-gh-actions"
-    
+
 jobs:
-  formatting:
-    name: Check formatting
+  build_push_image:
+    name: ${{ matrix.image_name }}
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - uses: pnpm/action-setup@v3
-        with:
-          run_install: true
-      - run: pnpm format:check
+    environment: dev
+    permissions:
+      contents: read
+      packages: write
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - image_name: probing-api
+            dockerfile_path: packages/probing-api
 
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - uses: pnpm/action-setup@v3
-        with:
-          run_install: true
-      - run: pnpm lint
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: normalize branch name for tagging
+        run: |
+          NORM_TAG=$(echo "$GITHUB_REF_NAME" | tr -s "/" "-")
+          echo "NORM_TAG=$NORM_TAG" >> $GITHUB_ENV
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3.0.0
         with:
-          node-version: 20
-      - uses: pnpm/action-setup@v3
-        with:
-          run_install: true
-      - run: pnpm test
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Build and push Docker image
+        id: build_push
+        uses: docker/build-push-action@v5.0.0
         with:
-          node-version: 20
-      - uses: pnpm/action-setup@v3
-        with:
-          run_install: true
-      - run: pnpm build
+          context: .
+          file: ${{ matrix.dockerfile_path }}/Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository }}:${{ env.NORM_TAG }}
