--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -62,4 +62,4 @@ jobs:
           file: ${{ matrix.dockerfile_path }}/Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}:${{ env.NORM_TAG }}
+            ghcr.io/${{ matrix.image_name }}:${{ env.NORM_TAG }}
