--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -58,4 +58,4 @@ jobs:
           file: ${{ matrix.dockerfile_path }}/Dockerfile
           push: true
           tags: |
-            ghcr.io/interop-be-${{ matrix.image_name }}:${{ env.NORM_TAG }}
+            ghcr.io/interop-be-${{ matrix.image_name }}:${{ github.ref_name }}
