develop: Use single quotes in github config

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -3,12 +3,12 @@ name: "Build & Push"
 on:
   push:
     branches:
-      - "develop"
-      - "main"
+      - 'develop'
+      - 'main'
     tags:
-      - "*"
+      - '*'
     paths:
-      - "packages/**"
+      - 'packages/**'
 
 jobs:
   build_push_image:
