--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -60,4 +60,4 @@ jobs:
           file: ${{ matrix.dockerfile_path }}/Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/interop-be-${{ matrix.image_name }}:${{ github.ref_name }}
+            ghcr.io/${{ github.repository }}/interop-be-${{ matrix.image_name }}:${{ github.ref_name }}
