--- a/packages/probing-api/Dockerfile
+++ b/packages/probing-api/Dockerfile
@@ -17,6 +17,8 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 COPY tsconfig.json /app/
 COPY turbo.json /app/
 COPY ./packages/probing-api /app/packages/probing-api
+RUN rm -rf /app/packages/probing-api/dist
+COPY ./packages/probing-api/dist/src /app/packages/probing-api/dist
 COPY ./packages/probing-eservice-operations/open-api /app/packages/probing-eservice-operations/open-api
 COPY ./packages/commons /app/packages/commons
 COPY ./packages/models /app/packages/models
