--- a/packages/probing-scheduler/Dockerfile
+++ b/packages/probing-scheduler/Dockerfile
@@ -17,6 +17,8 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 COPY tsconfig.json /app/
 COPY turbo.json /app/
 COPY ./packages/probing-scheduler /app/packages/probing-scheduler
+RUN rm -rf /app/packages/probing-scheduler/dist
+COPY ./packages/probing-scheduler/dist/src /app/packages/probing-scheduler/dist
 COPY ./packages/probing-eservice-operations/open-api /app/packages/probing-eservice-operations/open-api
 COPY ./packages/commons /app/packages/commons
 COPY ./packages/models /app/packages/models
