--- a/packages/probing-api/package.json
+++ b/packages/probing-api/package.json
@@ -32,20 +32,18 @@
     "vitest": "^0.33.0"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.536.0",
     "@tsconfig/node-lts": "^20.1.0",
     "@zodios/core": "^10.9.2",
     "@zodios/express": "^10.6.1",
-    "aws-xray-sdk": "^3.5.3",
-    "aws-xray-sdk-express": "^3.6.0",
+    "aws-sdk": "^2.657.0",
     "axios": "^1.6.7",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "openapi-zod-client": "^1.7.1",
     "pagopa-interop-probing-commons": "workspace:*",
-    "pagopa-interop-probing-eservice-operations-client": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
+    "pagopa-interop-probing-eservice-operations-client": "workspace:*",
     "ts-pattern": "^5.0.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
