--- a/packages/probing-api/package.json
+++ b/packages/probing-api/package.json
@@ -37,13 +37,14 @@
     "@zodios/express": "^10.6.1",
     "aws-sdk": "^2.657.0",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "openapi-zod-client": "^1.7.1",
     "pagopa-interop-probing-commons": "workspace:*",
-    "pagopa-interop-probing-models": "workspace:*",
     "pagopa-interop-probing-eservice-operations-client": "workspace:*",
+    "pagopa-interop-probing-models": "workspace:*",
     "ts-pattern": "^5.0.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
