develop: Update fe build path

--- a/.github/workflows/frontend-build-deploy-develop.yaml
+++ b/.github/workflows/frontend-build-deploy-develop.yaml
@@ -4,7 +4,7 @@ on:
     branches:
       - 'develop'
     paths:
-      - 'packages/probing-frontend'
+      - 'packages/probing-frontend/**'
 
 jobs:
   deploy_dev:
