--- a/.github/workflows/frontend-build-deploy-uat.yaml
+++ b/.github/workflows/frontend-build-deploy-uat.yaml
@@ -32,6 +32,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
+      - uses: pnpm/action-setup@v3
+        with:
+          run_install: true
       - name: Install dependencies
         run: |
           pnpm install
