--- a/packages/probing-eservice-operations/package.json
+++ b/packages/probing-eservice-operations/package.json
@@ -12,9 +12,7 @@
     "format:check": "prettier --check src",
     "format:write": "prettier --write src",
     "start": "node --watch --no-warnings --loader ts-node/esm -r 'dotenv-flow/config' ./src/index.ts",
-    "build": "tsc",
-    "generate-model": "mkdir -p ./src/model/generated && pnpm openapi-zod-client './open-api/api-eservice-operations-interop-v1.yaml' -o './src/model/generated/api.ts'",
-    "clean-generated": "pnpm exec rm ./src/model/generated/api.ts"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
