--- a/.github/workflows/frontend-build-deploy-prod.yaml
+++ b/.github/workflows/frontend-build-deploy-prod.yaml
@@ -16,6 +16,7 @@ jobs:
       VITE_AWS_PROJECT_REGION: ${{ vars.VITE_AWS_PROJECT_REGION }}
       VITE_AWS_COGNITO_REGION: ${{ vars.VITE_AWS_COGNITO_REGION }}
       VITE_PAGOPA_CATALOGUE: ${{ vars.VITE_PAGOPA_CATALOGUE }}
+      VITE_BASE_PATH: ${{ vars.VITE_BASE_PATH }}
     permissions:
       id-token: write
       contents: read
