Update logger with base context for error troubleshooting

--- a/packages/probing-api/.env
+++ b/packages/probing-api/.env
@@ -6,3 +6,4 @@ AWS_REGION="eu-central-1"
 API_OPERATIONS_BASEURL="http://localhost:3000"
 TOLERANCE_MULTIPLIER_IN_MINUTES=3
 CORS_ORIGIN_ALLOWED="*"
+APPLICATION_NAME="pagopa-interop-probing-api"
