--- a/packages/probing-eservice-operations/.env
+++ b/packages/probing-eservice-operations/.env
@@ -6,9 +6,10 @@ DB_HOST=127.0.0.1
 DB_NAME=mydatabase
 DB_USERNAME=mydbuser
 DB_PASSWORD=mypassword
-DB_PORT=5432
+DB_PORT=55000
 
 SCHEMA_NAME=probing
 TOLERANCE_MULTIPLIER_IN_MINUTES=3
 POLLING_FREQUENCY_THRESHOLD=3
 AWS_REGION=us-west-2
+APPLICATION_NAME="pagopa-interop-probing-eservice-operations"
