--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -19,22 +19,26 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.507.0",
+    "@types/uuid": "^9.0.2",
     "@zodios/core": "^10.9.6",
     "@zodios/express": "^10.6.1",
     "express-winston": "^4.2.0",
+    "pagopa-interop-probing-models": "workspace:*",
     "ts-pattern": "^5.0.1",
+    "uuid": "^10.0.0",
     "winston": "^3.9.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zod-validation-error": "^3.3.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
-    "typescript": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "typescript": "^5.1.3"
   }
 }
