--- a/packages/probing-eservice-operations/.env
+++ b/packages/probing-eservice-operations/.env
@@ -12,4 +12,4 @@ SCHEMA_NAME=probing
 TOLERANCE_MULTIPLIER_IN_MINUTES=3
 POLLING_FREQUENCY_THRESHOLD=3
 AWS_REGION=us-west-2
-APPLICATION_NAME="pagopa-interop-probing-eservice-operations"
+INTEROP_PROBING_OPERATIONS_APP_NAME="pagopa-interop-probing-eservice-operations"
