--- a/packages/clients/eservice-operations/package.json
+++ b/packages/clients/eservice-operations/package.json
@@ -22,20 +22,20 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.3"
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "ts-node": "10.9.2",
+    "typescript": "5.2.2",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "prettier": "3.2.5"
   },
   "dependencies": {
-    "@zodios/core": "^10.9.2",
-    "@zodios/express": "^10.6.1",
-    "openapi-zod-client": "^1.7.1",
-    "ts-pattern": "^5.0.1",
-    "zod": "^3.21.4"
+    "@zodios/core": "10.9.6",
+    "@zodios/express": "10.6.1",
+    "openapi-zod-client": "1.13.4",
+    "ts-pattern": "5.0.6",
+    "zod": "3.22.4"
   }
 }
