--- a/packages/probing-api/package.json
+++ b/packages/probing-api/package.json
@@ -20,33 +20,33 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/dotenv-flow": "^3.2.0",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^6.0.2",
-    "@types/uuid": "^9.0.2",
-    "supertest": "^6.3.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3",
-    "vitest": "^0.33.0"
+    "@types/cors": "2.8.17",
+    "@types/dotenv-flow": "3.3.3",
+    "@types/express": "4.17.21",
+    "@types/node": "20.10.4",
+    "@types/supertest": "6.0.2",
+    "@types/uuid": "9.0.7",
+    "supertest": "6.3.4",
+    "ts-node": "10.9.2",
+    "typescript": "5.2.2",
+    "vitest": "0.33.0"
   },
   "dependencies": {
-    "@tsconfig/node-lts": "^20.1.0",
-    "@zodios/core": "^10.9.2",
-    "@zodios/express": "^10.6.1",
-    "aws-sdk": "^2.657.0",
-    "axios": "^1.6.7",
-    "cors": "^2.8.5",
-    "dotenv-flow": "^3.2.0",
-    "express": "^4.18.2",
-    "helmet": "^7.1.0",
-    "openapi-zod-client": "^1.7.1",
+    "@tsconfig/node-lts": "20.1.1",
+    "@zodios/core": "10.9.6",
+    "@zodios/express": "10.6.1",
+    "aws-sdk": "2.1593.0",
+    "axios": "1.6.7",
+    "cors": "2.8.5",
+    "dotenv-flow": "3.3.0",
+    "express": "4.18.2",
+    "helmet": "7.1.0",
+    "openapi-zod-client": "1.13.4",
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-eservice-operations-client": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
-    "ts-pattern": "^5.0.1",
-    "uuid": "^9.0.0",
-    "zod": "^3.21.4"
+    "ts-pattern": "5.0.6",
+    "uuid": "9.0.1",
+    "zod": "3.22.4"
   }
 }
