--- a/packages/probing-eservice-operations/package.json
+++ b/packages/probing-eservice-operations/package.json
@@ -18,35 +18,35 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@testcontainers/postgresql": "^10.2.2",
-    "@types/dotenv-flow": "^3.2.0",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.3.1",
-    "@types/uuid": "^9.0.2",
-    "testcontainers": "^10.2.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3",
-    "vitest": "^0.33.0",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.3"
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "@testcontainers/postgresql": "10.6.0",
+    "@types/dotenv-flow": "3.3.3",
+    "@types/express": "4.17.21",
+    "@types/node": "20.10.4",
+    "@types/uuid": "9.0.7",
+    "testcontainers": "10.6.0",
+    "ts-node": "10.9.2",
+    "typescript": "5.2.2",
+    "vitest": "0.33.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "prettier": "3.2.5"
   },
   "dependencies": {
-    "@zodios/core": "^10.9.2",
-    "@zodios/express": "^10.6.1",
-    "dotenv-flow": "^3.2.0",
-    "express": "^4.18.2",
-    "openapi-zod-client": "^1.7.1",
+    "@zodios/core": "10.9.6",
+    "@zodios/express": "10.6.1",
+    "dotenv-flow": "3.3.0",
+    "express": "4.18.2",
+    "openapi-zod-client": "1.13.4",
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
     "pagopa-interop-probing-eservice-operations-client": "workspace:*",
-    "pg": "^8.11.3",
-    "ts-pattern": "^5.0.1",
-    "typeorm": "^0.3.17",
-    "uuid": "^9.0.0",
-    "zod": "^3.21.4"
+    "pg": "8.11.3",
+    "ts-pattern": "5.0.6",
+    "typeorm": "0.3.17",
+    "uuid": "9.0.1",
+    "zod": "3.22.4"
   }
 }
