--- a/packages/probing-frontend/package.json
+++ b/packages/probing-frontend/package.json
@@ -10,45 +10,45 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/base": "^5.0.0-beta.15",
-    "@mui/icons-material": "^5.14.9",
-    "@mui/lab": "^5.0.0-alpha.144",
-    "@mui/material": "^5.14.9",
-    "@mui/system": "^5.14.9",
-    "@mui/x-date-pickers": "^6.13.0",
-    "@pagopa/interop-fe-commons": "^1.3.1",
-    "@pagopa/mui-italia": "^1.0.1",
-    "@tanstack/react-query": "^4.35.3",
-    "@tanstack/react-query-devtools": "^4.35.3",
-    "aws-amplify": "^5.2.2",
-    "axios": "^1.6.0",
-    "d3": "^7.8.5",
-    "i18next": "^23.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.11",
-    "react-hook-form": "^7.50.0",
-    "react-i18next": "^13.2.2",
-    "react-router-dom": "^6.16.0",
-    "zustand": "^4.4.1"
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.0",
+    "@mui/base": "5.0.0-beta.38",
+    "@mui/icons-material": "5.15.12",
+    "@mui/lab": "5.0.0-alpha.167",
+    "@mui/material": "5.15.12",
+    "@mui/system": "5.15.12",
+    "@mui/x-date-pickers": "6.19.6",
+    "@pagopa/interop-fe-commons": "1.3.1",
+    "@pagopa/mui-italia": "1.1.0",
+    "@tanstack/react-query": "4.36.1",
+    "@tanstack/react-query-devtools": "4.36.1",
+    "aws-amplify": "5.3.17",
+    "axios": "1.6.7",
+    "d3": "7.8.5",
+    "i18next": "23.10.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-error-boundary": "4.0.13",
+    "react-hook-form": "7.51.0",
+    "react-i18next": "13.5.0",
+    "react-router-dom": "6.22.3",
+    "zustand": "4.5.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@types/react": "18.2.64",
+    "@types/react-dom": "18.2.21",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "@vitejs/plugin-react": "4.2.1",
     "@types/d3": "latest",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "prettier": "^3.0.3",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "prettier": "3.2.5",
+    "typescript": "5.2.2",
+    "vite": "5.1.5"
   }
 }
