--- a/packages/probing-scheduler/package.json
+++ b/packages/probing-scheduler/package.json
@@ -18,29 +18,29 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@types/dotenv-flow": "^3.2.0",
-    "@types/node": "^20.3.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3",
-    "vitest": "^0.33.0",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.3"
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "@types/dotenv-flow": "3.3.3",
+    "@types/node": "20.10.4",
+    "ts-node": "10.9.2",
+    "typescript": "5.2.2",
+    "vitest": "0.33.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "prettier": "3.2.5"
   },
   "dependencies": {
-    "@tsconfig/node-lts": "^20.1.0",
-    "@types/node-cron": "^3.0.11",
-    "@zodios/core": "^10.9.2",
-    "axios": "^1.6.7",
-    "dotenv-flow": "^3.2.0",
-    "node-cron": "^3.0.3",
+    "@tsconfig/node-lts": "20.1.1",
+    "@types/node-cron": "3.0.11",
+    "@zodios/core": "10.9.6",
+    "axios": "1.6.7",
+    "dotenv-flow": "3.3.0",
+    "node-cron": "3.0.3",
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
     "pagopa-interop-probing-eservice-operations-client": "workspace:*",
-    "ts-pattern": "^5.0.1",
-    "zod": "^3.21.4"
+    "ts-pattern": "5.0.6",
+    "zod": "3.22.4"
   }
 }
